<resources>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="app_name">Vamo Junto</string>
    <string name="complete_name">Nome completo</string>
    <string name="create_account">Criar uma conta</string>
    <string name="email">Email</string>
    <string name="errormsg_required_field">Campo obrigatório</string>
    <string name="fb_app_id">865170056839482</string>
    <string name="forgot_password_button_label"><u>Esqueceu sua senha?</u></string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_password_error">Sua senha deve conter de 6 a 20 dígitos, e apenas letras ou números.</string>
    <string name="loading">Carregando...</string>
    <string name="password">Senha</string>
    <string name="password_confirmation">Confirmação da senha</string>
    <string name="password_not_match">As senhas fornecidas não conferem.</string>
    <string name="signin">Login</string>
    <string name="signin_fb">Entre com o facebook</string>
    <string name="signup">Inscreva-se</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_string_text">Peça ou ofereça carona para a UFAM agora mesmo.</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="error_email_taken">O email fornecido já está cadastrado.</string>
    <string name="error_invalid_email">O email fornecido é inválido.</string>
    <string name="error_sign_up">Ocorreu um erro ao realizar o cadastro, por favor tente novamente.</string>
    <string name="signing_up">Cadastrando usuário.</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_login">Ocorreu um erro ao tentar acessar o aplicativo, por favor tente novamente.</string>
    <string name="error_wrong_email_pass">O email ou a senha fornecidos estão incorretos.</string>
    <string name="no_gps_dialog_button_no">Ignorar</string>
    <string name="no_gps_dialog_button_yes">Configurações.</string>
    <string name="no_gps_dialog_text">O Vamo Junto, funciona melhor se você ativar os serviços de localização.
        Por favor, ative o acesso à localização.</string>
    <string name="no_gps_dialog_title">Serviços de localização</string>
    <string name="title_activity_main_activity_teste">MainActivityTeste</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="openDrawer">Abrir</string>
    <string name="closeDrawer">Fechar</string>
    <string-array name="nav_drawer_items">
        <item>Minhas Caronas</item>
        <item>Amigos</item>
        <item>UFAM</item>
    </string-array>
    <string name="loading_address">Carregando endereço...</string>
    <string name="date">Data</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="destination">Destino</string>
    <string name="error_num_lugares">Apenas números entre 1 e 7 são permitidos neste campo.</string>
    <string name="more_details">Outras Informações</string>
    <string name="num_lugares">Lugares disponíveis</string>
    <string name="starting_point">Origem</string>
    <string name="save">Salvar</string>
    <string name="time">Hora</string>
    <string name="time_format">HH:mm</string>
    <string name="title_activity_nova_oferta_carona">Nova Carona</string>
    <string name="time_picker_title">A que horas você vai sair?</string>
    <string name="date_picker_title">Para quando é esta carona?</string>
    <string name="title_activity_get_location">Selecione uma localização no mapa.</string>
    <string name="choose_starting_point">Escolha o ponto de origem.</string>
    <string name="search_place">Digite o local que deseja procurar</string>
    <string name="error_starting_point_missing">Defina o ponto de origem da carona</string>
    <string name="error_destination_missing">Defina o destino da carona</string>
    <string name="error_past_date">A data escolhida para a carona já passou, por favor defina outra data.</string>
    <string name="error_past_time">O horário definido para a carona já passou, por favor defina um outro horário.</string>
    <string name="service_not_available">Serviço não disponível no momento.</string>
    <string name="invalid_lat_long_used">Latitude ou longitude inválidas.</string>
    <string name="no_address_found">Endereço não encontrado.</string>
    <string name="address_found">Endereço encontrado.</string>
    <string name="get_location_activity_title">Selecione um local</string>
    <string name="type_addr_location">Digite um endereço ou local</string>
    <string name="set_start_point">Definir ponto de partida.</string>
    <string name="set_destination">Definir destino</string>
    <string name="title_activity_search_place">Busque por um local.</string>
    <string name="search_error">Erro ao realizar busca, você está conectado a Internet?</string>
    <string name="no_results_found">Nenhum resultado foi encontrado.</string>
    <string name="de">De</string>
    <string name="para">Para</string>
    <string name="offer_ride">Oferecer carona</string>
    <string name="minhas_caronas_fragment_title">Minhas caronas</string>
    <string name="minhas_caronas_fragment_tab1">Motorista</string>
    <string name="minhas_caronas_fragment_tab2">Passageiro</string>
    <string name="salvando_carona">Salvando oferta de carona...</string>
    <string name="minhas_caronas_fragment_tab3">Pedidos</string>
    <string name="erro_cadastro_carona">Erro ao salvar carona, por favor tente novamente.</string>
    <string name="carona_cadastrada">Oferta de carona cadastrada com sucesso.</string>
    <string name="errormsg_default">Ocorreu um erro e ação não pôde ser concluída, por favor tente novamente.</string>
    <string name="default_error_screen_retry_text">Tentar novamente</string>
    <string name="errormsg_no_internet_connection">Você não está conectado, por favor conecte-se à Internet e tente novamente.</string>
    <string name="title_activity_new_ride_request">Novo pedido de carona</string>
    <string name="saving_ride_request">Salvando pedido de carona...</string>
    <string name="error_ride_request_registration">Erro ao cadastrar pedido de carona, por favor tente novamente.</string>
    <string name="request_ride">Pedir carona</string>
    <string name="ride_requested">Pedido de carona cadastrado com sucesso.</string>
    <string name="title_activity_ride_details">Detalhes da carona</string>
    <string name="driver">Motorista</string>
    <string name="passengers">Passageiros</string>
    <string name="request_a_ride">Pedir carona</string>
    <string name="from">De</string>
    <string name="to">Para</string>
    <string name="when">Quando</string>
    <string name="default_datetime_format">EEEE, dd/MM \'as\' HH:mm</string>
    <string name="details">Detalhes</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="no_passengers">Esta carona ainda não possui nenhum passageiro confirmado.</string>
    <string name="error_load_passengers">Ocorreu um erro ao carregar os passageiros da carona. Por favor tente novamente.</string>
    <string name="seats_available">Lugares disponíveis</string>
    <string name="no_seats_available">Esta carona não tem mais nenhum lugar disponível.</string>
    <string name="sending_seat_request">Enviando pedido de lugar na carona...</string>
    <string name="seat_request_sent">Pedido de lugar enviado. Aguarde o retorno do motorista da carona.</string>
    <string name="errormsg_request_already_sent">Você já enviou um pedido para esta carona. Por favor aguarde o retorno do motorista.</string>
    <string name="title_activity_my_ride_details">MyRideDetails</string>
    <string name="title_activity_seat_requests">Solicitações de lugar</string>
    <string name="seat_requests">Solicitações</string>
    <string name="view_requests">Solicitações para esta carona</string>
    <string name="confirm">Confirmar</string>
    <string name="reject">Rejeitar</string>
    <string name="no_seat_request_sent">Esta carona não possui nenhuma solicitação de lugar.</string>
    <string name="type_a_message">Digite uma mensagem</string>
    <string name="enter_a_message_to_seat_request">Escreva uma mensagem para o motorista da carona</string>
    <string name="send_seat_request">Enviar pedido</string>
    <string name="cancel">Cancelar</string>
    <string name="confirming_seat_request">Confirmando pedido de lugar...</string>
    <string name="seat_request_confirmed">Pedido de carona aceito. Seu amigo será notificado que está confirmado como passageiro.</string>
    <string name="rejecting_seat_request">Rejeitando pedido de lugar...</string>
    <string name="seat_request_rejected">O pedido de lugar foi recusado, o solicitante não fará parte da carona como passageiro.</string>
    <string name="errormsg_no_seats_available">Esta carona não possui mais nenhum lugar disponível.</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="loadingmsg_positioning_map">Posicionando o mapa...</string>
    <string name="notifymsg_seat_requested">Você recebeu um pedido de lugar.</string>
    <string name="notifymsg_seatrequest_confirmed">%1s confirmou seu lugar na carona.</string>
    <string name="notifymsg_rideoffer_cancelled">%1s cancelou a sua carona.</string>
    <string name="errormsg_already_passenger">Você já é passageiro desta carona.</string>
    <string name="ride_offers">Ofertas</string>
    <string name="ride_requests">Pedidos</string>
    <string name="my_friends_feed">Caronas de amigos</string>
    <string name="title_activity_manage_friends">Meus amigos</string>
    <string name="followed_friends">Amigos que sigo</string>
    <string name="facebook_friends">Amigos do facebook</string>
    <string name="following">Seguindo</string>
    <string name="fb_friends">Amigos do Facebook</string>
    <string name="follow_fb_friends">Marque os amigos para seguir.</string>
    <string name="no_following_message">Você ainda não está seguindo ninguém. Escolha seus amigos do Facebook para seguir no aplicativo.</string>
    <string name="no_ride_to_display">Não há nenhuma carona para ser exibida.</string>
    <string name="save_changes">Salvar alterações</string>
    <string name="saving">Salvando...</string>
    <string name="choose_destination">Escolha o destino</string>
    <string name="no_request_to_display">Não há nenhum pedido de carona para exibir.</string>
    <string name="no_friends_requests">Seus amigos ainda não fizeram nenhum pedido de carona.</string>
    <string name="title_activity_request_details">Solicitação de carona</string>
    <string name="requester">Solicitante</string>
    <string name="days_ago">dias atrás.</string>
    <string name="yesterday">Ontem</string>
    <string name="hours_ago">horas atrás.</string>
    <string name="minutes_ago">minutos atrás.</string>
    <string name="seconds_ago">segundos atrás.</string>
    <string name="an_hour_ago">1 hora atrás.</string>
    <string name="now">Agora</string>
    <string name="sending">Enviando...</string>
    <string name="notifymsg_requestmsg_received">%1s respondeu seu pedido de carona.</string>
    <string name="no_fb_friends">Está muito vazio aqui. \n\nConvide seus amigos do Facebook, quanto mais amigos cadastrados, mais fácil conseguir uma carona.</string>
    <string name="name">Nome</string>
    <string name="message_subject">Título</string>
    <string name="message">Mensagem</string>
</resources>