<!--
  ~ Copyright (c) 2015 Vamo Junto. All Rights Reserved.
  ~
  ~ This software is the confidential and proprietary information of Vamo Junto
  ~ ("Confidential Information"). You shall not
  ~ disclose such Confidential Information and shall use it only in
  ~ accordance with the terms of the license agreement you entered into
  ~ with Vamo Junto.
  ~
  ~ VAMO JUNTO MAKES NO REPRESENTATIONS OR WARRANTIES ABOUT THE SUITABILITY OF
  ~ THE SOFTWARE, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
  ~ TO THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE, OR NON-INFRINGEMENT. VAMO JUNTO SHALL NOT BE LIABLE FOR
  ~ ANY DAMAGES SUFFERED BY LICENSEE AS A RESULT OF USING, MODIFYING OR
  ~ DISTRIBUTING THIS SOFTWARE OR ITS DERIVATIVES.
  ~
  ~ See LICENSE.txt
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.vamojunto.ui.activities.CadastroActivity$PlaceholderFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/titulo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"/>

    <EditText
        android:id="@+id/nome_edit_text"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo_text_view"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:hint="@string/complete_name" />

    <EditText
        android:id="@+id/email_edit_text"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nome_edit_text"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/senha_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/email_edit_text"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm_senha_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@+id/senha_edit_text"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:hint="@string/password_confirmation" />

    <Button
        android:id="@+id/cadastro_button"
        android:layout_below="@+id/confirm_senha_edit_text"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />

</RelativeLayout>
