<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.vamojunto.MainActivity$PlaceholderFragment"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/tituloTextView"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/welcome_string_text"
        android:id="@+id/textoTextView"
        android:textColor="#ff000000"
        android:textSize="@dimen/abc_text_size_small_material"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tituloTextView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/textoTextView"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"
        android:hint="Email"
        android:elegantTextHeight="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/senhaEditText"
        android:inputType="textPassword"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="12sp"
        android:hint="Senha" />

    <LinearLayout
        android:id="@+id/botoesPanel"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senhaEditText"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/senhaEditText"
        android:layout_alignRight="@+id/senhaEditText">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/button"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:padding="0dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:id="@+id/button2"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:padding="0dp" />
    </LinearLayout>

    <Button
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/botoesPanel"
        android:layout_marginTop="30dp"
        android:background="@drawable/fb_login_button"
        android:text="@string/signin_fb"
        android:id="@+id/fb_auth_button"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:textSize="12sp"/>


</RelativeLayout>
