<!--
  ~ Copyright (c) 2015 Vamo Junto. All Rights Reserved.
  ~
  ~ This software is the confidential and proprietary information of Vamo Junto
  ~ ("Confidential Information"). You shall not
  ~ disclose such Confidential Information and shall use it only in
  ~ accordance with the terms of the license agreement you entered into
  ~ with Vamo Junto.
  ~
  ~ VAMO JUNTO MAKES NO REPRESENTATIONS OR WARRANTIES ABOUT THE SUITABILITY OF
  ~ THE SOFTWARE, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
  ~ TO THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE, OR NON-INFRINGEMENT. VAMO JUNTO SHALL NOT BE LIABLE FOR
  ~ ANY DAMAGES SUFFERED BY LICENSEE AS A RESULT OF USING, MODIFYING OR
  ~ DISTRIBUTING THIS SOFTWARE OR ITS DERIVATIVES.
  ~
  ~ See LICENSE.txt
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/starting_point_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_pin_orig"/>

        <EditText
            android:id="@+id/starting_point_edit_text"

            android:background="#00000000"
            android:focusable="false"
            android:hint="@string/starting_point"
            android:textSize="18sp"

            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            />
    </LinearLayout>
    <View
        android:id="@+id/separator_1"

        android:layout_below="@id/starting_point_group"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/separator"
        />

    <LinearLayout
        android:id="@+id/destination_group"
        android:layout_below="@+id/separator_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_pin_dest"/>

        <EditText
            android:id="@+id/destination_edit_text"

            android:background="#00000000"
            android:focusable="false"
            android:hint="@string/destination"
            android:textSize="18sp"

            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            />
    </LinearLayout>
    <View
        android:id="@+id/separator_2"

        android:layout_below="@id/destination_group"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/separator"
        />

    <LinearLayout
        android:id="@+id/datetime_group"
        android:layout_below="@+id/separator_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_calendar"/>

            <EditText
                android:id="@+id/date_edit_text"

                android:background="#00000000"
                android:focusable="false"
                android:hint="@string/date"
                android:textSize="18sp"

                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_clock"/>

            <EditText
                android:id="@+id/time_edit_text"

                android:background="#00000000"
                android:focusable="false"
                android:hint="@string/time"
                android:textSize="18sp"

                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/separator_3"

        android:layout_below="@id/datetime_group"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/separator"
        />

    <EditText
        android:id="@+id/details_edit_text"

        android:layout_above="@+id/save_button"
        android:layout_below="@+id/separator_3"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"

        android:background="#00000000"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/more_details"
        android:inputType="textMultiLine"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/save_button"

        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="0dp"
        android:padding="0dp"
        android:text="@string/save"
        android:textColor="@color/white"
        style="@style/Save.Button"
        />

</RelativeLayout>
