<!--
  ~ Copyright (c) 2015 Vamo Junto. All Rights Reserved.
  ~
  ~ This software is the confidential and proprietary information of Vamo Junto
  ~ ("Confidential Information"). You shall not
  ~ disclose such Confidential Information and shall use it only in
  ~ accordance with the terms of the license agreement you entered into
  ~ with Vamo Junto.
  ~
  ~ VAMO JUNTO MAKES NO REPRESENTATIONS OR WARRANTIES ABOUT THE SUITABILITY OF
  ~ THE SOFTWARE, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
  ~ TO THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~ PARTICULAR PURPOSE, OR NON-INFRINGEMENT. VAMO JUNTO SHALL NOT BE LIABLE FOR
  ~ ANY DAMAGES SUFFERED BY LICENSEE AS A RESULT OF USING, MODIFYING OR
  ~ DISTRIBUTING THIS SOFTWARE OR ITS DERIVATIVES.
  ~
  ~ See LICENSE.txt
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_below="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white" >

        <EditText
            android:id="@+id/name_edit_text"

            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:padding="16dp"
            android:textSize="16sp"/>

        <View
            android:id="@+id/name_border"

            android:layout_below="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/separator" />

        <EditText
            android:id="@+id/email_edit_text"

            android:layout_below="@+id/name_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:padding="16dp"
            android:textSize="16sp"/>

        <View
            android:id="@+id/email_border"

            android:layout_below="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/separator" />

        <Spinner
            android:id="@+id/message_type_spinner"

            android:layout_below="@+id/email_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawSelectorOnTop="true"
            android:padding="8dp"
            android:textSize="16sp"/>

        <View
            android:id="@+id/spinner_border"

            android:layout_below="@+id/message_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/separator"/>

        <EditText
            android:id="@+id/subject_edit_text"

            android:layout_below="@+id/spinner_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:ems="10"
            android:hint="@string/message_subject"
            android:inputType="textEmailSubject"
            android:padding="16dp"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Title"/>

        <EditText
            android:id="@+id/message_edit_text"

            android:layout_below="@+id/subject_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:padding="16dp"
            android:textSize="16sp"/>

    </RelativeLayout>
</RelativeLayout>
